--- a/randomChoice.css
+++ b/randomChoice.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #2b88f0;
+  background-color: rgb(87, 9, 110);
   font-family: 'Muli', sans-serif;
   display: flex;
   flex-direction: column;
